# TRAINER-BACK

./: .gitignore  README.md  pyproject.toml
apps/meal/: apps.py  models.py  serializers.py  urls.py  views.py
apps/meal/migrations/: 0001_initial.py
apps/training/: models.py  serializers.py  urls.py  views.py
apps/training/migrations/: 0001_initial.py
apps/user/: models.py  serializers.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py
config/: settings.py  urls.py
